<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.INNewsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/newsProfile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_empty_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/newsTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_bold"
            android:includeFontPadding="false"
            android:text="@string/news_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/metropolis_medium"
            android:includeFontPadding="false"
            android:text="@string/news_description"
            android:textColor="#8B8E9F"
            android:textSize="13sp" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/newsCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/newsTitleView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/newsTechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_technology"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_business"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsEntertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_entertainment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_general"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_health"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsScience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_science"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newsSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_rounded_12"
                android:fontFamily="@font/metropolis_medium"
                android:includeFontPadding="false"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text="@string/news_sports"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/newsLatestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/news_latest"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsLatestNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsLatestTitle"
        tools:itemCount="1"
        tools:listitem="@layout/latest_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_rounded_100">

        <FrameLayout
            android:id="@+id/newsHome"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_home"
                android:tint="@color/orange"
                android:background="@android:color/transparent"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsAdd"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"
                android:background="@android:color/transparent"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsVideos"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_videos"
                android:background="@android:color/transparent"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsSearch"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_search"
                android:background="@android:color/transparent"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/newsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsProfile"/>

</androidx.constraintlayout.widget.ConstraintLayout>